update script demarrage kafka sans droits administrateurs